--- a/vgg_and_lstm.ipynb
+++ b/vgg_and_lstm.ipynb
@@ -17,7 +17,9 @@
     "from PIL import Image\n",
     "import os\n",
     "import glob\n",
-    "import cv2"
+    "import torchvision.io\n",
+    "import cv2\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -109,7 +111,7 @@
     "# Dataset and DataLoader\n",
     "transform = ToTensor()\n",
     "train_dataset = LipReadingDataset(root_dir, transform=transform)\n",
-    "train_loader = DataLoader(train_dataset, batch_size=5, shuffle=True, collate_fn=lambda x: collate_fn(x))\n",
+    "train_loader = DataLoader(train_dataset, batch_size=10, shuffle=True, collate_fn=lambda x: collate_fn(x))\n",
     "\n",
     "# Collate function to handle variable-length sequences\n",
     "def collate_fn(batch):\n",
@@ -122,10 +124,10 @@
     "\n",
     "        padded_video = torch.cat([video, torch.zeros((pad_size, video.shape[1], video.shape[2], video.shape[3]))], dim=0)  # Add padding for grayscale frames\n",
     "        \n",
-    "        # Resize video to (max_len, C, 224, 224)\n",
+    "        # Resize video to (max_len, 1, 224, 224)\n",
     "        resized_video = torch.stack([resize(frame, (224, 224)) for frame in padded_video])\n",
-    "        \n",
     "        padded_videos.append(resized_video)\n",
+    "        # padded_videos.append(padded_video)\n",
     "    return torch.stack(padded_videos), torch.tensor(labels)\n"
    ]
   },
@@ -146,13 +148,12 @@
     "        self.vgg.classifier = nn.Identity()  # Remove final classification layer\n",
     "\n",
     "        # RNN for sequence modeling\n",
-    "        self.rnn = nn.LSTM(input_size=512, hidden_size=256, num_layers=2, batch_first=True, bidirectional=True)\n",
+    "        self.rnn = nn.LSTM(input_size=512*7*7, hidden_size=256, num_layers=2, batch_first=True, bidirectional=True)\n",
     "        \n",
     "        # Fully connected layer for classification\n",
     "        self.fc = nn.Linear(256*2, num_classes)  # bidirectional doubles the output features\n",
     "\n",
     "    def forward(self, x):\n",
-    "        print(x.shape)\n",
     "        batch_size, timesteps, C, H, W = x.size()\n",
     "        c_in = x.view(batch_size * timesteps, C, H, W)\n",
     "        c_out = self.vgg.features(c_in)\n",
@@ -168,22 +169,102 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04afbbbabb9d4e399f1b2e1998d13d0a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 1/20:   0%|          | 0/2 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5, 29, 1, 224, 224])\n"
+      "Epoch [1/20], Average Loss: 0.7823\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ed03687d58e4cfa9749b5a29259f6a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 2/20:   0%|          | 0/2 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/20], Average Loss: 0.7630\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e27e3e7ba2044b1a28b2972543fdf7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 3/20:   0%|          | 0/2 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/20], Average Loss: 0.7145\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ca961d2af5444a8bf455f6b547c6e6b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 4/20:   0%|          | 0/2 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/20], Average Loss: 0.6950\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8f9b703033a42bca8ece2f406bbb491",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch 5/20:   0%|          | 0/2 [00:00<?, ?batch/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -194,17 +275,19 @@
     "num_classes = len(train_dataset.classes)  # Automatically get the number of classes\n",
     "learning_rate = 0.001\n",
     "num_epochs = 20\n",
-    "batch_size = 1\n",
+    "batch_size = 10\n",
     "\n",
     "# Initialize model, loss, and optimizer\n",
     "model = LipReadingModel(num_classes=num_classes).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
-    "# Training loop\n",
+    "# Training loop with progress bar\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
-    "    for i, (videos, labels) in enumerate(train_loader):\n",
+    "    epoch_loss = 0\n",
+    "    progress_bar = tqdm(train_loader, desc=f\"Epoch {epoch + 1}/{num_epochs}\", unit=\"batch\")\n",
+    "    for i, (videos, labels) in enumerate(progress_bar):\n",
     "        videos = videos.to(device)\n",
     "        labels = labels.to(device)\n",
     "\n",
@@ -215,8 +298,11 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        if (i + 1) % 10 == 0:\n",
-    "            print(f'Epoch [{epoch + 1}/{num_epochs}], Step [{i + 1}/{len(train_loader)}], Loss: {loss.item():.4f}')"
+    "        epoch_loss += loss.item()\n",
+    "        progress_bar.set_postfix(loss=loss.item())\n",
+    "\n",
+    "    avg_loss = epoch_loss / len(train_loader)\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Average Loss: {avg_loss:.4f}')\n"
    ]
   }
  ],
