modified preprocess slightly

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,47 +127,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "face_detector = dlib.get_frontal_face_detector()\n",
-    "landmark_predictor = dlib.shape_predictor('shape_predictor_68_face_landmarks.dat')\n",
-    "source_root = 'selected_mp4_files'\n",
-    "source_word = 'ABOUT'\n",
-    "source_folder = 'train'\n",
-    "input_video = 'ABOUT_00003.mp4'\n",
-    "output_root = 'processed_selected_mp4_files'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_ABOUT_00001():\n",
-    "        input_video_path = os.path.join(source_root, source_word, 'train', input_video)\n",
-    "        output_video_path = os.path.join(output_root, source_word, 'train', input_video)\n",
+    "def test_00001(face_detector, landmark_predictor, source_root, output_root, source_word, mode, input_video):\n",
+    "        input_video_path = os.path.join(source_root, source_word, mode, input_video)\n",
+    "        output_video_path = os.path.join(output_root, source_word, mode, input_video)\n",
     "        process_vid(face_detector, landmark_predictor, input_video_path, output_video_path, fps=25, width=256, height=256, output_size=64)\n",
     "\n",
-    "def test_ABOUT_whole():\n",
+    "def test_whole(face_detector, landmark_predictor, source_root, output_root, source_word, mode):\n",
     "        start_time = time.time()\n",
-    "        source_folder = os.path.join(source_root, source_word, 'train')\n",
-    "        output_video_folder = os.path.join(output_root, source_word, 'train')\n",
+    "        source_folder = os.path.join(source_root, source_word, mode)\n",
+    "        output_video_folder = os.path.join(output_root, source_word, mode)\n",
     "        for input_video in sorted([file for file in os.listdir(source_folder) if file.endswith(\".mp4\")]):\n",
     "                input_video_path = os.path.join(source_folder, input_video)\n",
     "                output_video_path = os.path.join(output_video_folder, input_video)\n",
     "                process_vid(face_detector, landmark_predictor, input_video_path, output_video_path, fps=25, width=256, height=256, output_size=64)\n",
     "        end_time = time.time()\n",
     "        elapsed = end_time - start_time\n",
-    "        print(f\"Finished Processing ABOUT folder in {elapsed: .2f} seconds\")\n",
+    "        print(f\"Finished Processing {source_word} folder in {elapsed: .2f} seconds\")\n",
     "        \n",
     "\n",
-    "def run_all():\n",
+    "def run_all(face_detector, landmark_predictor, source_root, output_root, mode):\n",
     "        start_time = time.time()\n",
     "        source_folders = [folder for folder in sorted(os.listdir(source_root)) if folder != '.DS_Store']\n",
     "\n",
     "        for source_word in source_folders:\n",
-    "                source_folder = os.path.join(source_root, source_word, 'train')\n",
-    "                output_video_folder = os.path.join(output_root, source_word, 'train')\n",
+    "                source_folder = os.path.join(source_root, source_word, mode)\n",
+    "                output_video_folder = os.path.join(output_root, source_word, mode)\n",
     "                for input_video in sorted([file for file in os.listdir(source_folder) if file.endswith(\".mp4\")]):\n",
     "                        input_video_path = os.path.join(source_folder, input_video)\n",
     "                        output_video_path = os.path.join(output_video_folder, input_video)\n",
@@ -180,10 +172,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Processing ABOUT folder in  18.34 seconds\n"
+     ]
+    }
+   ],
    "source": [
+    "face_detector = dlib.get_frontal_face_detector()\n",
+    "landmark_predictor = dlib.shape_predictor('shape_predictor_68_face_landmarks.dat')\n",
+    "source_root = 'selected_mp4_files'\n",
+    "source_word = 'ABOUT'\n",
+    "mode = 'test'\n",
+    "input_video = 'ABOUT_00001.mp4'\n",
+    "output_root = 'processed_selected_mp4_files'\n",
     "#This notebook is used to preprocess the mp4's \n",
     "#It 1) centers, 2) horizontally aligns the mp4 around the lips center\n",
     "#3) Grayscale's the mp4, 4) Crops it to a 64x64 mp4\n",
@@ -192,8 +199,16 @@
     "#I ran it on mac so it might work differently on windows or something. \n",
     "#test_ABOUT_00001 preprocesses just ABOUT_00001.mpy\n",
     "#test_ABOUT_whole preprocesses the entire ABOUT train data\n",
-    "#run_all preprocesses all the Words train set"
+    "#run_all preprocesses all the Words train set\n",
+    "test_whole(face_detector, landmark_predictor, source_root, output_root, source_word, mode)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
