--- a/cnn_lstm.ipynb
+++ b/cnn_lstm.ipynb
@@ -20,7 +20,8 @@
     "import glob\n",
     "import torchvision.io\n",
     "import cv2\n",
-    "from tqdm.notebook import tqdm"
+    "from tqdm.notebook import tqdm\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -113,6 +114,7 @@
     "transform = ToTensor()\n",
     "train_dataset = LipReadingDataset(root_dir, transform=transform)\n",
     "train_loader = DataLoader(train_dataset, batch_size=10, shuffle=True, collate_fn=lambda x: collate_fn(x))\n",
+    "test_loader = DataLoader(train_dataset, batch_size=10, shuffle=True, collate_fn=lambda x: collate_fn(x))\n",
     "\n",
     "# Collate function to handle variable-length sequences\n",
     "def collate_fn(batch):\n",
@@ -161,10 +163,10 @@
    "outputs": [],
    "source": [
     "class CNNLSTM(nn.Module):\n",
-    "    def __init__(self, cnn_model, hidden_dim, num_classes, num_layers=1):\n",
+    "    def __init__(self, cnn_model, hidden_dim, num_classes, num_layers=2):\n",
     "        super(CNNLSTM, self).__init__()\n",
     "        self.cnn = cnn_model\n",
-    "        self.lstm = nn.LSTM(input_size=512 * 7 * 7, hidden_size=hidden_dim, num_layers=num_layers, batch_first=True, bidirectional=True)\n",
+    "        self.lstm = nn.LSTM(input_size=512 * 7 * 7, hidden_size=hidden_dim, num_layers=num_layers, batch_first=False, bidirectional=True)\n",
     "        self.fc = nn.Linear(hidden_dim*2, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -181,42 +183,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Zachary\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\conv.py:456: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ..\\aten\\src\\ATen\\native\\cudnn\\Conv_v8.cpp:919.)\n",
-      "  return F.conv2d(input, weight, bias, self.stride,\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 1.5678398609161377\n",
-      "Epoch 2/20, Loss: 0.6310233473777771\n",
-      "Epoch 3/20, Loss: 0.5345368385314941\n",
-      "Epoch 4/20, Loss: 0.4503503739833832\n",
-      "Epoch 5/20, Loss: 0.4365369379520416\n",
-      "Epoch 6/20, Loss: 0.3823126256465912\n",
-      "Epoch 7/20, Loss: 0.3784024715423584\n",
-      "Epoch 8/20, Loss: 0.3330995440483093\n",
-      "Epoch 9/20, Loss: 0.2866179645061493\n",
-      "Epoch 10/20, Loss: 0.2673974335193634\n",
-      "Epoch 11/20, Loss: 0.21023885905742645\n",
-      "Epoch 12/20, Loss: 0.2609831988811493\n",
-      "Epoch 13/20, Loss: 0.21097242832183838\n",
-      "Epoch 14/20, Loss: 0.16426411271095276\n",
-      "Epoch 15/20, Loss: 0.14461857080459595\n",
-      "Epoch 16/20, Loss: 0.11699937283992767\n",
-      "Epoch 17/20, Loss: 0.09704429656267166\n",
-      "Epoch 18/20, Loss: 0.11190438270568848\n",
-      "Epoch 19/20, Loss: 0.0853935033082962\n",
-      "Epoch 20/20, Loss: 0.0870797410607338\n"
+      "Epoch 1/10, Loss: 0.8249804377555847\n",
+      "Epoch 2/10, Loss: 0.8183687329292297\n",
+      "Epoch 3/10, Loss: 0.6991655230522156\n",
+      "Epoch 4/10, Loss: 0.6558952331542969\n",
+      "Epoch 5/10, Loss: 0.6106643676757812\n",
+      "Epoch 6/10, Loss: 0.6167622804641724\n",
+      "Epoch 7/10, Loss: 0.5625695586204529\n",
+      "Epoch 8/10, Loss: 0.5704450011253357\n",
+      "Epoch 9/10, Loss: 0.5360334515571594\n",
+      "Epoch 10/10, Loss: 0.5357653498649597\n",
+      "Model saved to resnet_lstm_model.pth\n"
      ]
     }
    ],
    "source": [
-    "def train(model, dataloader, criterion, optimizer, num_epochs):\n",
+    "def train(model, dataloader, criterion, optimizer, scheduler, num_epochs):\n",
     "    model.train()\n",
     "    for epoch in range(num_epochs):\n",
     "        for inputs, labels in dataloader:\n",
@@ -226,6 +211,8 @@
     "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            scheduler.step()\n",
+    "\n",
     "        print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}\")\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -233,26 +220,60 @@
     "\n",
     "num_classes = len(train_dataset.classes)  # Automatically get the number of classes\n",
     "learning_rate = 0.001\n",
-    "num_epochs = 20\n",
-    "batch_size = 10\n",
+    "num_epochs = 10\n",
     "\n",
     "cnn_model = CNNFeatureExtractor().to(device)\n",
-    "model = CNNLSTM(cnn_model, hidden_dim=256, num_classes=len(train_dataset.classes)).to(device)\n",
+    "model = CNNLSTM(cnn_model, hidden_dim=256, num_classes=num_classes).to(device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
+    "\n",
     "\n",
     "dataloader = train_loader\n",
     "\n",
-    "train(model, dataloader, criterion, optimizer, num_epochs=num_epochs)"
+    "train(model, dataloader, criterion, optimizer, scheduler, num_epochs=num_epochs)\n",
+    "\n",
+    "\n",
+    "# Save the trained model\n",
+    "model_save_path = 'resnet_lstm_model.pth'\n",
+    "torch.save(model.state_dict(), model_save_path)\n",
+    "print(f\"Model saved to {model_save_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 10 / 20 correct (50.00)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_accuracy(loader, model):\n",
+    "\n",
+    "    num_correct = 0\n",
+    "    num_samples = 0\n",
+    "    model.eval()  # set model to evaluation mode\n",
+    "    with torch.no_grad():\n",
+    "        for x, y in loader:\n",
+    "            x = x.to(device=device, dtype=torch.float32)  # move to device, e.g. GPU\n",
+    "            y = y.to(device=device, dtype=torch.long)\n",
+    "            scores = model(x)\n",
+    "            _, preds = scores.max(1)\n",
+    "            num_correct += (preds == y).sum()\n",
+    "            num_samples += preds.size(0)\n",
+    "        acc = float(num_correct) / num_samples\n",
+    "        print('Got %d / %d correct (%.2f)' % (num_correct, num_samples, 100 * acc))\n",
+    "        return 100 * acc\n",
+    "\n",
+    "acc = check_accuracy(test_loader, model)"
+   ]
   }
  ],
  "metadata": {
@@ -271,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
